--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section class="cta">
             <div class="cta-text">
                 <h1></h1>
-                <button></button>
+                <button id="random-cta"></button>
             </div>
             <img id="cta-img" src="" alt="Image of a code snippet.">
         </section>
